@@ -3,6 +3,7 @@ server: http://localhost:9876
 load:
     - ../tools/jquery-1.7.1.js
     - ../../src/main/java/com/lorepo/icplayer/public/libs/jcanvas.min.js
+    - ../../src/main/java/com/lorepo/icplayer/public/libs/commons.js
     - ../tools/sinon-1.3.4.js
     - src/*.js
     - test/*.js
